<resources>
    <string name="app_name">Chat</string>
    <string name="Email">Enter Email</string>
    <string name="Password">Enter Password</string>
    <string name="Login">Login</string>
    <string name="CreateNew">Create New Account</string>
    <string name="Name">Enter Name</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="ForumTitle">Forum Title</string>
    <string name="ForumDesc">Forum Description</string>
    <string name="Logout">Logout</string>
    <string name="NewForum">New Forum</string>
</resources>