<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment" >

    <EditText
        android:id="@+id/editTextRegisterName"
        android:layout_width="358dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="355dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterName"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterName"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterName" />

    <EditText
        android:id="@+id/editTextRegisterPassoword"
        android:layout_width="353dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterEmail"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="329dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:text="Submit"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterPassoword"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterPassoword"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassoword" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@android:string/cancel"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>